Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-743

Flakiness in same-batch insert/update test ClientTest.TestSeveralRowMutatesPerBatch

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • M5
    • None
    • client
    • None

    Description

      Only a couple small patches away from master, looks like a flaky test.

      I0507 00:19:29.659699 30030 client-test.cc:2097] Testing insert/update in same batch, key 1.
      I0507 00:19:29.664898 30030 client-test-util.cc:23] Op UPDATE int32 key=1, int32 int_val=2 had status Not found: key not found
      F0507 00:19:29.664970 30030 client-test-util.cc:26] Check failed: _s.ok() Bad status: IO error: Some errors occurred
      *** Check failure stack trace: ***
          @     0x7f2011c1f38d  google::LogMessage::Fail() at ??:0
          @     0x7f2011c2122d  google::LogMessage::SendToLog() at ??:0
          @     0x7f2011c1ef7c  google::LogMessage::Flush() at ??:0
          @     0x7f2011c21b4e  google::LogMessageFatal::~LogMessageFatal() at ??:0
          @     0x7f2011c0bbe1  kudu::client::LogSessionErrorsAndDie() at ??:0
          @           0x494f0c  kudu::client::FlushSessionOrDie() at /home/mpercy/src/kudu/src/kudu/client/client-test-util.h:26
          @           0x48c394  kudu::client::ClientTest_TestSeveralRowMutatesPerBatch_Test::TestBody() at /home/mpercy/src/kudu/src/kudu/client/client-test.cc:2100
      

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              mpercy Mike Percy
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: